WIP: bpmn-js i18n translation setup

--- a/components/editor/BpmnEditor.module.css
+++ b/components/editor/BpmnEditor.module.css
@@ -129,6 +129,12 @@
   background: #c82333;
 }
 
+.languageSwitcher {
+  margin-left: 0.5rem;
+  padding-left: 0.5rem;
+  border-left: 1px solid #e0e0e0;
+}
+
 .container {
   display: flex;
   flex: 1;
